Sto facendo il pulsante upgrade

--- a/index.html
+++ b/index.html
@@ -125,10 +125,11 @@
 
                 <div class="upgrade-btn">
 
-
+                    <a href="#">EFFETTUA L'UPGRADE</a>
 
                 </div>
 
+                ciao
                 
 
             </div>
