Sto facento il contenuto principale

--- a/index.html
+++ b/index.html
@@ -125,11 +125,34 @@
 
                 <div class="upgrade-btn">
 
-                    <a href="#">EFFETTUA L'UPGRADE</a>
+                    <div class="btn">
+
+                        <a href="#">EFFETTUA L'UPGRADE</a>
+
+                    </div>
 
                 </div>
 
-                ciao
+                <div class="main-content">
+
+                    <div class="main-content-nav">
+
+                        <ul>
+
+                            <li><a href="#"><span>IN EVIDENZA</span><p></p></a></li>
+
+                            <li><a href="#">PODCAST</a></li>
+                            <li><a href="#">CLASSIFICHE</a></li>
+                            <li><a href="#">GENERE E MOOD</a></li>
+                            <li><a href="#">NUOVE USCITE</a></li>
+                            <li><a href="#">SCOPRI</a></li>
+
+                        </ul>
+
+                    </div>
+                    
+
+                </div>
                 
 
             </div>
