Footer Sezione Centrale

--- a/index.html
+++ b/index.html
@@ -316,6 +316,20 @@
 
             <div class="play-section">
 
+                <div class="play-section-btn">
+
+                    <a href="#"><i class="fas fa-random"></i></a>
+                    <a href="#"><i class="fas fa-step-backward"></i></a>
+                    <a href="#"><i class="far fa-play-circle"></i></a>
+                    <a href="#"><i class="fas fa-step-forward"></i></a>
+                    <a href="#"><i class="fas fa-redo-alt"></i></a>
+
+                </div>
+
+                <div class="time-audio">
+
+                    
+                </div>
                 
             </div>
 
