Sto settando il responsive

--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
 
                     <div class="useraccount-download">
 
-                        <div>
+                        <div class="download">
 
                             <a href="#"><img src="img/download.svg" alt="Download Logo"> <span>Installa App</span></a>
 
                         </div>
 
-                        <span></span>
+                        <div class="line"></div>
 
-                        <div>
+                        <div class="account">
 
-                            <a href="#"><img src="img/profile.svg" alt="Profile Logo"> <span>john Doe</span></a>
+                            <a href="#"><img src="img/profile.svg" alt="Profile Logo"> <span>John Doe</span></a>
 
                         </div>
 
@@ -155,9 +155,9 @@
 
                         <h2>Recent Played</h2>
 
-                        <div class="albums-section">
+                        <div class="albums-section lol">
 
-                            <a class="album-content" href="#">
+                            <a class="album-content lol1" href="#">
 
                                 <img src="img/metal_lifting.jpg" alt="Heavy Metal Image">
 
@@ -167,7 +167,7 @@
 
                             </a>
 
-                            <a class="album-content" href="#">
+                            <a class="album-content lol1" href="#">
 
                                 <img src="img/stranger.jpeg" alt="Stranger Image">
 
@@ -177,7 +177,7 @@
 
                             </a>
 
-                            <a class="album-content" href="#">
+                            <a class="album-content lol1" href="#">
 
                                 <img src="img/aquietplace.jpeg" alt="A Quiet Place Image">
 
@@ -187,7 +187,7 @@
 
                             </a>
 
-                            <a class="album-content" href="#">
+                            <a class="album-content lol1" href="#">
 
                                 <img src="img/split.jpeg" alt="Split Image">
 
@@ -197,7 +197,7 @@
 
                             </a>
 
-                            <a class="album-content" href="#">
+                            <a class="album-content lol1" href="#">
 
                                 <img src="img/cure.jpeg" alt="A Cure For Wellness Image">
 
@@ -207,7 +207,7 @@
 
                             </a>
 
-                            <a class="album-content" href="#">
+                            <a class="album-content lol1" href="#">
 
                                 <img src="img/sinister.jpeg" alt="Sinister Image">
 
@@ -230,7 +230,7 @@
 
                         <div class="albums-section">
 
-                            <a class="album-content" href="#">
+                            <a id="no-margin" class="album-content" href="#">
 
                                 <img src="img/radar.jpeg" alt="Il tuo relase radar image">
 
@@ -258,7 +258,7 @@
 
                         <div class="albums-section">
 
-                            <a class="album-content" href="#">
+                            <a id="no-margin" class="album-content" href="#">
 
                                 <img src="img/youg.jpeg" alt="Lana del Rey image">
 
