--- a/index.html
+++ b/index.html
@@ -159,7 +159,21 @@
 
                             <a class="album-content lol1" href="#">
 
-                                <img src="img/metal_lifting.jpg" alt="Heavy Metal Image">
+                                <div class="image">
+
+                                    <img src="img/metal_lifting.jpg" alt="Heavy Metal Image">
+
+                                    <div class="overlay">
+                                        
+                                        <div class="overlay-btn">
+
+                                            <i class="far fa-play-circle"></i>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
 
                                 <h4>Heavy Metal</h4>
 
