Overlay fatto solo alla prima img

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                         <ul>
 
                             <li>
-                                <a href="#">
+
+                                <a id="line-menu-row" href="#">
+
+                                <div class="line-menu"></div>
                                     
                                 <img src="img/home.svg" alt="home Logo">
                                 
@@ -139,7 +142,7 @@
 
                         <ul>
 
-                            <li><a href="#"><span>IN EVIDENZA</span><p></p></a></li>
+                            <li><a href="#"><span>IN EVIDENZA</span><div class="line-nav"></div></a></li>
 
                             <li><a href="#">PODCAST</a></li>
                             <li><a href="#">CLASSIFICHE</a></li>
